Fix spacing on sm devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,7 +7,6 @@
 
 i {
     font-size: 25px;
-    margin: 5px;
 }
 
 html, body {
